Add CYPN logos to Media folder. Change logo in the default layout to CYPN logo. Change descriptions of sign-up and contact us boxes.

--- a/websiteVer2.0/views/index.jade
+++ b/websiteVer2.0/views/index.jade
@@ -1,16 +1,16 @@
 extends ../layouts/default
 
 block head
-  
+
 
 block neck
   link(rel='stylesheet', href='/views/index.min.css?#{cacheBreaker}')
 
 block body
   div.jumbotron
-    h2 Chinese Young Professional Network 
+    h2 Chinese Young Professional Network
     p.lead
-    | All the younge professionals are here to enjoy life with you!  
+    | All the younge professionals are here to enjoy life with you!
     div
         a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
         |  or&nbsp;
@@ -21,17 +21,17 @@ block body
       div.panel.panel-default
         div.panel-body
           h3 About Us
-          P Chinese Young Professional Network(CYPN) is at the forefront of uniting the Chinese speaking professionals and students in greater Boston area. It is formed to provide the Chinese community a venue for information exchange on business ideas and career opportunities. CYPN also provides members and participants with opportunities to meet, as well as develop relationships with professionals in consulting, finance, marketing, information technology, academia, engineering, etc. in a wide variety of industries. In addition, CYPN seeks to develop proactive and community-oriented leaders through a social, educational awareness and service network.   
+          P Chinese Young Professional Network(CYPN) is at the forefront of uniting the Chinese speaking professionals and students in greater Boston area. It is formed to provide the Chinese community a venue for information exchange on business ideas and career opportunities. CYPN also provides members and participants with opportunities to meet, as well as develop relationships with professionals in consulting, finance, marketing, information technology, academia, engineering, etc. in a wide variety of industries. In addition, CYPN seeks to develop proactive and community-oriented leaders through a social, educational awareness and service network.
           a.btn.btn-default.btn-block(href='/about/') Learn More
     div.col-sm-4
       div.panel.panel-default
         div.panel-body
           h3 Sign Up
           P Please join us by creating an account with us. It's free!
-          a.btn.btn-default.btn-block(href='/signup/') Learn More
+          a.btn.btn-default.btn-block(href='/signup/') Sign up
     div.col-sm-4
       div.panel.panel-default
         div.panel-body
           h3 Contact Us
-          p At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti.
-          a.btn.btn-default.btn-block(href='/contact/') Learn More
+          p Have suggestions? Get some ideas? Want to join us as an officer? We are all ears if you have got something to say to us.
+          a.btn.btn-default.btn-block(href='/contact/') Contact us
