Change description on the home page

--- a/websiteVer2.0/views/about/index.jade
+++ b/websiteVer2.0/views/about/index.jade
@@ -31,6 +31,6 @@ block body
           p Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
     div.col-sm-6.special
       div.page-header
-        h1 Prestige Worldwide
-      p.lead The first name in entertainment.
+        h1 Chinese Young Professional Networking
+      p.lead Unite all the young-in-hearts
       i.fa.fa-volume-up.super-awesome
