--- a/websiteVer2.0/views/index.jade
+++ b/websiteVer2.0/views/index.jade
@@ -10,7 +10,7 @@ block body
   div.jumbotron
     h2 Chinese Young Professional Network
     p.lead
-    | All the younge professionals are here to enjoy life with you!
+    | All the young professionals are here to enjoy life with you!
     div
         a.btn.btn-primary.btn-lg(href='/signup/') Create an Account
         |  or&nbsp;
